@@ -1,3 +1,8 @@
+2013-05-22  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/57338
+	* gfortran.dg/assumed_type_6.f90: New.
+
 2013-05-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/57211
